[handlers]: add json to errors
