# docs/swagger.json
@@ -41,9 +41,9 @@
                         }
                     },
                     "500": {
-                        "description": "Failed to get actors",
+                        "description": "Internal Server Error",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/handlers.errorResponse"
                         }
                     }
                 }
@@ -87,19 +87,19 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/handlers.statusResponse"
                         }
                     },
                     "400": {
-                        "description": "Invalid actor ID\" or \"Invalid request payload",
+                        "description": "Bad Request",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/handlers.errorResponse"
                         }
                     },
                     "500": {
-                        "description": "Failed to update actor",
+                        "description": "Internal Server Error",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/handlers.errorResponse"
                         }
                     }
                 }
@@ -136,19 +136,19 @@
                     "201": {
                         "description": "Actor created successfully",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/handlers.statusResponse"
                         }
                     },
                     "400": {
                         "description": "Invalid request payload",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/handlers.errorResponse"
                         }
                     },
                     "500": {
                         "description": "Failed to create actor",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/handlers.errorResponse"
                         }
                     }
                 }
@@ -177,19 +177,19 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/handlers.statusResponse"
                         }
                     },
                     "400": {
-                        "description": "Invalid actor ID",
+                        "description": "Bad Request",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/handlers.errorResponse"
                         }
                     },
                     "500": {
-                        "description": "Failed to delete actor",
+                        "description": "Internal Server Error",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/handlers.errorResponse"
                         }
                     }
                 }
@@ -229,21 +229,21 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "Movie updated successfully",
+                        "description": "OK",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/handlers.statusResponse"
                         }
                     },
                     "400": {
-                        "description": "Invalid movie ID\" or \"Invalid request payload",
+                        "description": "Bad Request",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/handlers.errorResponse"
                         }
                     },
                     "500": {
-                        "description": "Failed to update movie",
+                        "description": "Internal Server Error",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/handlers.errorResponse"
                         }
                     }
                 }
@@ -261,6 +261,7 @@
                 "tags": [
                     "Movies"
                 ],
+                "summary": "Create Movie",
                 "parameters": [
                     {
                         "description": "Movie object",
@@ -274,18 +275,21 @@
                 ],
                 "responses": {
                     "201": {
-                        "description": "Movie created successfully"
+                        "description": "Created",
+                        "schema": {
+                            "$ref": "#/definitions/handlers.statusResponse"
+                        }
                     },
                     "400": {
-                        "description": "Invalid request payload",
+                        "description": "Bad Request",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/handlers.errorResponse"
                         }
                     },
                     "500": {
-                        "description": "Failed to create movie",
+                        "description": "Internal Server Error",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/handlers.errorResponse"
                         }
                     }
                 }
@@ -312,18 +316,21 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "Movie deleted successfully"
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/handlers.statusResponse"
+                        }
                     },
                     "400": {
-                        "description": "Invalid movie ID",
+                        "description": "Bad Request",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/handlers.errorResponse"
                         }
                     },
                     "500": {
-                        "description": "Failed to delete movie",
+                        "description": "Internal Server Error",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/handlers.errorResponse"
                         }
                     }
                 }
@@ -361,9 +368,9 @@
                         }
                     },
                     "500": {
-                        "description": "Failed to get movies",
+                        "description": "Internal Server Error",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/handlers.errorResponse"
                         }
                     }
                 }
@@ -401,9 +408,9 @@
                         }
                     },
                     "500": {
-                        "description": "Failed to get movies",
+                        "description": "Internal Server Error",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/handlers.errorResponse"
                         }
                     }
                 }
@@ -441,15 +448,15 @@
                         }
                     },
                     "400": {
-                        "description": "Unmarshalling",
+                        "description": "Bad Request",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/handlers.errorResponse"
                         }
                     },
                     "500": {
-                        "description": "Generating Token",
+                        "description": "Internal Server Error",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/handlers.errorResponse"
                         }
                     }
                 }
@@ -497,6 +504,14 @@
                 }
             }
         },
+        "handlers.errorResponse": {
+            "type": "object",
+            "properties": {
+                "error": {
+                    "type": "string"
+                }
+            }
+        },
         "handlers.signInInput": {
             "type": "object",
             "required": [
@@ -516,6 +531,14 @@
             "type": "object",
             "properties": {
                 "token": {
+                    "type": "string"
+                }
+            }
+        },
+        "handlers.statusResponse": {
+            "type": "object",
+            "properties": {
+                "status": {
                     "type": "string"
                 }
             }
